Troubleshooting layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ a {
     font-weight: 600;
     margin: 2rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -341,6 +341,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width:0;
 }
 
 
@@ -870,14 +871,15 @@ a {
 
 
 .block--domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 6rem);
     justify-items: center;
-    max-width: 700px;
     margin: 0 auto;
+    max-width: 700px;
 }
 
 
